src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Account Request</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>CSC %26 FST Service Request</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Active</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Monitor</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Legal Review</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Other Issues</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SFDC Admin Support</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Support Request</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Additional_FTP_Link__c</fullName>
        <label>Additional FTP Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AntiFraud_List__c</fullName>
        <label>AntiFraud List</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AntiFraud_Status__c</fullName>
        <label>AntiFraud Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AntiFraud Pass</fullName>
                </value>
                <value>
                    <fullName>AntiFraud Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver_Email__c</fullName>
        <label>Approver Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutoRepairStutas__c</fullName>
        <description>腾讯自动报修case特殊状态</description>
        <inlineHelpText>腾讯自动报修case当需要人工处理时请选择异常转人工</inlineHelpText>
        <label>AutoRepairStutas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>异常转人工</fullName>
                </value>
                <value>
                    <fullName>取消</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Batch_Flg__c</fullName>
        <label>Batch Flg</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <defaultValue>&quot;中国&quot;</defaultValue>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State_Province__c</fullName>
        <label>Billing State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <label>Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip_Postal_Code__c</fullName>
        <defaultValue>&apos;100000&apos;</defaultValue>
        <label>Billing Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CD_r1B__c</fullName>
        <label>CD_r1B</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Action_Type__c</fullName>
        <label>Action Type_DEL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Troubleshooting step</fullName>
                </value>
                <value>
                    <fullName>Plan of action</fullName>
                </value>
                <value>
                    <fullName>Onsite actions</fullName>
                </value>
                <value>
                    <fullName>Cause</fullName>
                </value>
                <value>
                    <fullName>Resolution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Actual_PN__c</fullName>
        <label>Actual PN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Actual_SN__c</fullName>
        <label>Actual SN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Additional_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Caller</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases_Additional_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSC_Advisory_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Advisory Id</label>
        <referenceTo>Advisory_Id__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases_Advisory_ID</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSC_Advisory_Id_Text__c</fullName>
        <label>Advisory Id Text</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Antifraud_Check_Pass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Antifraud Check Pass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSC_Auto_Assign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Case auto assign to Q</description>
        <label>Auto Assign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSC_CaseOrQuickLog__c</fullName>
        <label>CaseOrQuickLog</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal Case</fullName>
                </value>
                <value>
                    <fullName>Quick Log</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Case_Category__c</fullName>
        <label>Case Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HW</fullName>
                </value>
                <value>
                    <fullName>SW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Case_DAH__c</fullName>
        <label>Case DAH</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Case_DLH__c</fullName>
        <label>Case DLH</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Case_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Case_Note_Log__c</fullName>
        <label>Case Note Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Case_Phone_Log__c</fullName>
        <label>Case Phone Log</label>
        <length>75256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Case_Research_Log__c</fullName>
        <label>Case Research Log</label>
        <length>75256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Case_Resolution__c</fullName>
        <label>Case Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DEF</fullName>
                </value>
                <value>
                    <fullName>Configured</fullName>
                </value>
                <value>
                    <fullName>Customer Satisfaction</fullName>
                </value>
                <value>
                    <fullName>Document Sent</fullName>
                </value>
                <value>
                    <fullName>Information Provided</fullName>
                </value>
                <value>
                    <fullName>Installed</fullName>
                </value>
                <value>
                    <fullName>Onsite Solution</fullName>
                </value>
                <value>
                    <fullName>Prformnc Tuned/Chckd</fullName>
                </value>
                <value>
                    <fullName>SW Cause unknown</fullName>
                </value>
                <value>
                    <fullName>SW Doc/Training</fullName>
                </value>
                <value>
                    <fullName>SW Problem Known</fullName>
                </value>
                <value>
                    <fullName>SW Problem new</fullName>
                </value>
                <value>
                    <fullName>SW Shipped</fullName>
                </value>
                <value>
                    <fullName>Transferred</fullName>
                </value>
                <value>
                    <fullName>Admin Close</fullName>
                </value>
                <value>
                    <fullName>Auto-Close</fullName>
                </value>
                <value>
                    <fullName>Cancel per Customer</fullName>
                </value>
                <value>
                    <fullName>Customer Self-solve</fullName>
                </value>
                <value>
                    <fullName>Depot Repair</fullName>
                </value>
                <value>
                    <fullName>No Contact Made</fullName>
                </value>
                <value>
                    <fullName>No Recommendation</fullName>
                </value>
                <value>
                    <fullName>No Trouble found</fullName>
                </value>
                <value>
                    <fullName>Void Call</fullName>
                </value>
                <value>
                    <fullName>Parts Shipped</fullName>
                </value>
                <value>
                    <fullName>Please Specify</fullName>
                </value>
                <value>
                    <fullName>Remote Resolve</fullName>
                </value>
                <value>
                    <fullName>Repair Complete</fullName>
                </value>
                <value>
                    <fullName>Revisit</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Replace Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Case_Service_Category__c</fullName>
        <formula>if(NOT(ispickval(Status,&apos;Closed&apos;)),&apos;&apos;,IF(OR(ISPICKVAL(CSC_Repair_Class_Code__c, &apos;AO&apos;), 
ISPICKVAL(CSC_Repair_Class_Code__c, &apos;AR&apos;),
ISPICKVAL(CSC_Repair_Class_Code__c, &apos;CA&apos;),
ISPICKVAL(CSC_Repair_Class_Code__c, &apos;CO&apos;),
ISPICKVAL(CSC_Repair_Class_Code__c, &apos;IR&apos;),
ISPICKVAL(CSC_Repair_Class_Code__c, &apos;NT&apos;),
ISPICKVAL(CSC_Repair_Class_Code__c, &apos;SV&apos;),
ISPICKVAL(CSC_Repair_Class_Code__c, &apos;SW&apos;),
ISPICKVAL(CSC_Repair_Class_Code__c, &apos;UC&apos;),
ISPICKVAL(CSC_Repair_Class_Code__c, &apos;WK&apos;),
ISPICKVAL(CSC_Repair_Class_Code__c, &apos;SC&apos;),
ISPICKVAL(CSC_Repair_Class_Code__c, &apos;PO&apos;),
ISPICKVAL(CSC_Repair_Class_Code__c, &apos;PA&apos;),
ISPICKVAL(CSC_Repair_Class_Code__c, &apos;PP&apos;),
ISPICKVAL(CSC_Repair_Class_Code__c, &apos;ML&apos;),
ISPICKVAL(CSC_Repair_Class_Code__c, &apos;CP&apos;),
ISPICKVAL(CSC_Repair_Class_Code__c, &apos;AB&apos;),
ISPICKVAL(CSC_Repair_Class_Code__c, &apos;AS&apos;)
),&apos;Corrective&apos;,( IF( TEXT(CSC_Repair_Class_Code__c) = &apos;&apos;, &apos;&apos;, &apos;Non-Corrective&apos;) )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Service Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Case_Status__c</fullName>
        <label>HPE Case Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>RR Closed</fullName>
                </value>
                <value>
                    <fullName>Accept Problem</fullName>
                </value>
                <value>
                    <fullName>Open Requester</fullName>
                </value>
                <value>
                    <fullName>Problem Resolution</fullName>
                </value>
                <value>
                    <fullName>Partner Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Case_Title__c</fullName>
        <label>Case Title(del)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Case_Travel__c</fullName>
        <label>Case Travel</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Case_Type2__c</fullName>
        <label>Case Type2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>SN</fullName>
                </value>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>PC</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>RS</fullName>
                </value>
                <value>
                    <fullName>TS</fullName>
                </value>
                <value>
                    <fullName>Ins</fullName>
                </value>
                <value>
                    <fullName>ISS MA renew Onsite Check</fullName>
                </value>
                <value>
                    <fullName>ISSCTR Onsite check/Audit</fullName>
                </value>
                <value>
                    <fullName>ISS Install DOA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Case_Type__c</fullName>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HW Delivery</fullName>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Advanced Support</fullName>
                </value>
                <value>
                    <fullName>Install</fullName>
                </value>
                <value>
                    <fullName>MC Non-BCS</fullName>
                </value>
                <value>
                    <fullName>MC Datacenter</fullName>
                </value>
                <value>
                    <fullName>Proactive</fullName>
                </value>
                <value>
                    <fullName>Questions</fullName>
                </value>
                <value>
                    <fullName>SW Delivery</fullName>
                </value>
                <value>
                    <fullName>CE Assist</fullName>
                </value>
                <value>
                    <fullName>Depot Repair</fullName>
                </value>
                <value>
                    <fullName>T&amp;M</fullName>
                </value>
                <value>
                    <fullName>MC CTR</fullName>
                </value>
                <value>
                    <fullName>CTR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Case_With_100_Diagnosis_Accuracy_NEW__c</fullName>
        <formula>if (CSC_Onsite_Start_Date_Earliest__c - CSC_Report_DP_Dispatch_CE_Dt_Latest__c &gt; 0, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case With 100 Diagnosis Accuracy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_Cause__c</fullName>
        <label>Cause</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Close_Date__c</fullName>
        <label>Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_Closer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_Closer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSC_Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Conciege_Email__c</fullName>
        <defaultValue>&apos;contact800@hpe.com&apos;</defaultValue>
        <label>Conciege Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CSC_Contract__c</fullName>
        <label>Contract</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>China</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Creater_Manager_EmployeeID__c</fullName>
        <formula>CreatedBy.Manager.Employee_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creater Manager EmployeeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Cust_Track__c</fullName>
        <label>Cust Track#</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Days_Btwn_Rerpr__c</fullName>
        <formula>IF(And(!ISNULL(PreCase__c),
!ISBLANK(CSC_SN__c),
!ISBLANK(CSC_PN__c),
!ISNULL(TEXT(Delivery_Alternative__c)),
AND(!ISNULL(PreCase__r.CSC_Onsite_Fixed_Date__c),CreatedDate&gt;PreCase__r.CSC_Onsite_Fixed_Date__c)),
CreatedDate-PreCase__r.CSC_Onsite_Fixed_Date__c,
IF(AND(!ISNULL(PreCase__r.CSC_Onsite_Stop_Date__c),CreatedDate&gt;PreCase__r.CSC_Onsite_Stop_Date__c),CreatedDate-PreCase__r.CSC_Onsite_Stop_Date__c,CreatedDate-PreCase__r.ClosedDate))</formula>
        <label>Days Btwn Rerpr</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_District__c</fullName>
        <label>District(delete)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_End_Monitor__c</fullName>
        <label>End Monitor</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_End_Pending__c</fullName>
        <label>End Pending</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_Enroute_Date__c</fullName>
        <label>Enroute Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_Entitle_Guaranteed_DT__c</fullName>
        <label>Entitle Guaranteed D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_Entitlement_Coverage__c</fullName>
        <formula>Entitlement.Coverage_Response__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entitlement Coverage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Environment__c</fullName>
        <label>Environment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Error_Codes__c</fullName>
        <label>Error Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_FTP_End_Date__c</fullName>
        <label>FTP End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSC_FTP_Start_Date__c</fullName>
        <label>FTP Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSC_FTP_URL__c</fullName>
        <label>FTP URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CSC_Family_Code__c</fullName>
        <label>Family Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Family_Desc__c</fullName>
        <label>Family Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Firmware_Version__c</fullName>
        <label>Firmware Version</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Fraud_Override_Reason__c</fullName>
        <label>Fraud Override Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_GSEM_Msg__c</fullName>
        <label>GSEM_Msg</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_GSEM_Status__c</fullName>
        <label>GSEM_Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>WOpen</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Wait</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>WClose</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Gbu_L1__c</fullName>
        <formula>CSC_hpl__r.Gbu_L1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gbu L1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Gbu_L2__c</fullName>
        <formula>CSC_hpl__r.Gbu_L2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gbu L2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Gbu__c</fullName>
        <formula>CSC_hpl__r.Gbu__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gbu</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_HPl_Pgu__c</fullName>
        <formula>CSC_hpl__r.Pgu__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPl Pgu</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_HW_TAT_Hours__c</fullName>
        <label>HW TAT Hours</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_In_Queue_Date__c</fullName>
        <label>In Queue Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_In_Queue_Duration__c</fullName>
        <formula>If(IsNull(CSC_In_Queue_Date__c),&apos;0天：0小时：0分钟&apos;,
If(IsNull(CSC_Out_Queue_Date__c),
Text(Floor((Now()-CSC_In_Queue_Date__c)))+&apos;天：&apos;+
Text(Floor((Floor((Now()-CSC_In_Queue_Date__c)*24*60)-Floor((Now()-CSC_In_Queue_Date__c))*24*60)/60))+&apos;小时：&apos;+
Text(Mod(Floor((Now()-CSC_In_Queue_Date__c)*24*60),60))+&apos;分钟&apos;
,
Text(Floor((CSC_Out_Queue_Date__c-CSC_In_Queue_Date__c)))+&apos;天：&apos;+
Text(Floor((Floor((CSC_Out_Queue_Date__c-CSC_In_Queue_Date__c)*24*60)-Floor((CSC_Out_Queue_Date__c-CSC_In_Queue_Date__c))*24*60)/60))+&apos;小时：&apos;+
Text(Mod(Floor((CSC_Out_Queue_Date__c-CSC_In_Queue_Date__c)*24*60),60))+&apos;分钟&apos;
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In Queue Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSC_Is_Issue_Intermittent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Issue Intermittent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSC_Issue__c</fullName>
        <label>Issue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Latested_DT__c</fullName>
        <label>Latested D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_List_List_Parts_for_Used__c</fullName>
        <label>List Parts for Used(New)</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_List_of_Parts_Not_Used_new__c</fullName>
        <label>List of Parts Not Used(New)</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Monitor_Minutes__c</fullName>
        <formula>IF(AND(NOT(ISNULL(CSC_Start_Monitor__c)),NOT(ISNULL(CSC_End_Monitor__c))),
Floor((CSC_End_Monitor__c-CSC_Start_Monitor__c)*24*60), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monitor Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSC_NPS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NPS Pass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSC_Non_Corrective_1__c</fullName>
        <label>Non-corrective Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DEF</fullName>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_OPTId__c</fullName>
        <description>外部系统ID（HPE）</description>
        <externalId>true</externalId>
        <label>HPE ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CSC_OTC__c</fullName>
        <label>OTC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>05R-Normal Contract</fullName>
                    <color>#0B6FCE</color>
                    <label>05R-Normal Contract</label>
                </value>
                <value>
                    <fullName>02N-Warranty Normal</fullName>
                    <color>#78C953</color>
                    <label>02N-Warranty Normal</label>
                </value>
                <value>
                    <fullName>05A-Complmt TAC</fullName>
                    <color>#E27001</color>
                    <label>05A-Complmt TAC</label>
                </value>
                <value>
                    <fullName>05K-Extended Warranty</fullName>
                    <color>#A845DC</color>
                    <label>05K-Extended Warranty</label>
                </value>
                <value>
                    <fullName>05Q-Preventative</fullName>
                    <color>#F3D904</color>
                    <label>05Q-Preventative</label>
                </value>
                <value>
                    <fullName>02G-Sevice Note</fullName>
                    <color>#A53711</color>
                    <label>02G-Sevice Note</label>
                </value>
                <value>
                    <fullName>06J-Intl Gratis</fullName>
                    <color>#66E9BD</color>
                    <label>06J-Intl Gratis</label>
                </value>
                <value>
                    <fullName>00C-Cust Claims Cont</fullName>
                    <color>#0B24BE</color>
                    <label>00C-Cust Claims Cont</label>
                </value>
                <value>
                    <fullName>00W-Cust Claims Warr</fullName>
                    <color>#419249</color>
                    <label>00W-Cust Claims Warr</label>
                </value>
                <value>
                    <fullName>00E-No Entitlement</fullName>
                </value>
                <value>
                    <fullName>01-Trade</fullName>
                    <color>#B6E32E</color>
                    <label>01-Trade</label>
                </value>
                <value>
                    <fullName>06M-Intl re-repair</fullName>
                    <color>#641CCF</color>
                    <label>06M-Intl re-repair</label>
                </value>
                <value>
                    <fullName>05F-Comp Fld Inst</fullName>
                    <color>#F96FB7</color>
                    <label>05F-Comp Fld Inst</label>
                </value>
                <value>
                    <fullName>05S-Compl Site Prep</fullName>
                    <color>#2F5D85</color>
                    <label>05S-Compl Site Prep</label>
                </value>
                <value>
                    <fullName>06F-Intl Field Instl</fullName>
                    <color>#AFCADF</color>
                    <label>06F-Intl Field Instl</label>
                </value>
                <value>
                    <fullName>05P-Contracts: Predictive Support</fullName>
                    <color>#8F6429</color>
                    <label>05P-Contracts: Predictive Support</label>
                </value>
                <value>
                    <fullName>09U-UWD Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSC_Onsite_Fixed_Date__c</fullName>
        <label>Onsite Fixed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_Onsite_Start_Date_Earliest__c</fullName>
        <label>Onsite Start Date Earliest</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_Onsite_Start_Date__c</fullName>
        <label>Onsite Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_Onsite_Stop_Date__c</fullName>
        <label>Onsite Stop Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_Operating_System_Version__c</fullName>
        <label>Operating System Version</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSC_Out_Queue_Date__c</fullName>
        <label>Out Queue Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSC_PGU__c</fullName>
        <label>PGU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ISS</fullName>
                </value>
                <value>
                    <fullName>HPSD</fullName>
                </value>
                <value>
                    <fullName>BLD</fullName>
                </value>
                <value>
                    <fullName>BCS</fullName>
                </value>
                <value>
                    <fullName>L0</fullName>
                </value>
                <value>
                    <fullName>HPN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>